@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-24T01:50:14Z",
-  "count" : 3,
+  "timestamp" : "2022-12-07T08:24:37Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
