@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-07T01:42:20Z",
+  "timestamp" : "2022-12-07T08:24:37Z",
   "count_outdated" : 649,
   "uniques_outdated" : 409,
-  "count" : 657,
-  "uniques" : 414,
+  "count" : 660,
+  "uniques" : 416,
   "clones" : [
     {
       "timestamp": "2022-11-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -32,6 +32,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
