@@ -1,10 +1,10 @@
 {
-  "count": 8,
-  "uniques": 2,
+  "count": 11,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-11-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -21,6 +21,11 @@
       "timestamp": "2022-11-26T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
