@@ -1,3 +1,11 @@
+2022-12-07T08:24:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3637107652 # 681
+* notice: last 14d: unq all: 4 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 409 649 / 414 657
+* notice: next accum: outdated-unq outdated-all / unq all: 409 649 / 416 660
+* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -1 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2022-11-23 2022-12-07]
+
 2022-12-07T01:42:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3635065448 # 680
 * notice: last 14d: unq all: 2 8
